src/test/resources/org/nest/nestml/_cocos/valid/varNotDefinedBeforeUse.nestml
neuron Dummy:
  function f():
    x integer
    y real = 5 * x
    x = 13

    t1 integer
    t2 integer

    for x in t1 ... t2 step 1:
    # blaa
    end

    x = 2

    xx real = 2 * x

    while t2 > t1:
    end

    exp(t1)
  end
end

