src/test/resources/org/nest/nestml/_cocos/invalid/varNotDefinedBeforeUse.nestml
neuron Dummy:
  function f():
    y real = 5 * x # Error 1

    x = 13 # Error 2

    for x in t1 ... t2 step 1: # 3,4 errors
    # blaa
    end


    x = 2 # Error 5

    x real = 2 * x # Error 6

    while t2 > t1: # error 7, 8
    end

    exp(t1) # error 9
    exp(t2) # error 10

    t1 integer
    t2 integer
  end
end